Closed Bug 763223 Opened 14 years ago Closed 14 years ago

"ASSERTION: parentSize should be valid" with huge padding

Categories

(Core :: Layout, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: jruderman, Assigned: ehsan.akhgari)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(3 files)

Attached file testcase
###!!! ASSERTION: parentSize should be valid: 'parentSize.width != NS_INTRINSICSIZE && parentSize.height != NS_INTRINSICSIZE', file layout/base/nsCSSFrameConstructor.cpp, line 11994 This assertion was added in bug 157681.
Attached file stack trace
So the right padding here is a large value, which causes tons of these types of warnings: "have unconstrained width; this should only result from very large sizes, not attempts at intrinsic width calculation: 'aContainingBlockWidth != NS_UNCONSTRAINEDSIZE'", and also causes the width value to be unconstrained size, which triggers this assertion. How are we supposed to handle cases like this with huge values in layout?
We don't really have a plan for these. :(
So there isn't too much we can do about this assertion, except for taking it out?
I have an idea in bug 765861. For now, this should probably be downgraded to a warning.
Attached patch Patch (v1)Splinter Review
This patch converts the assertion into a warning.
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #634258 - Flags: review?(dbaron)
Comment on attachment 634258 [details] [diff] [review] Patch (v1) Please use NS_WARN_IF_FALSE instead of the #ifdef and NS_WARNING. r=dbaron with that
Attachment #634258 - Flags: review?(dbaron) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: