Bug 763223 - convert the assertion added in bug 157681 to a warning; r=dbaron